; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_loop.c_lo_set_bpf_tap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_loop.c_lo_set_bpf_tap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.TYPE_2__ = type { i32, i32* }

@lo_ifp = common dso_local global %struct.ifnet* null, align 8
@lo_statics = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*, i32, i32*)* @lo_set_bpf_tap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lo_set_bpf_tap(%struct.ifnet* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.ifnet*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load %struct.ifnet*, %struct.ifnet** %4, align 8
  %8 = load %struct.ifnet*, %struct.ifnet** @lo_ifp, align 8
  %9 = icmp eq %struct.ifnet* %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @VERIFY(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @lo_statics, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %12, i32* %15, align 8
  %16 = load i32, i32* %5, align 4
  switch i32 %16, label %26 [
    i32 131, label %17
    i32 130, label %17
    i32 128, label %21
    i32 129, label %21
  ]

17:                                               ; preds = %3, %3
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @lo_statics, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i32* null, i32** %20, align 8
  br label %26

21:                                               ; preds = %3, %3
  %22 = load i32*, i32** %6, align 8
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @lo_statics, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  store i32* %22, i32** %25, align 8
  br label %26

26:                                               ; preds = %3, %21, %17
  ret i32 0
}

declare dso_local i32 @VERIFY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
